--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,15 @@
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
     "chart.js": "^4.5.0",
+    "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
+    "papaparse": "^5.5.3",
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.9.1",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
