--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@headlessui/react": "^2.2.8",
     "@heroicons/react": "^2.2.0",
+    "axios": "^1.12.2",
     "chart.js": "^4.5.0",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.544.0",
