--- a/client/package.json
+++ b/client/package.json
@@ -24,11 +24,11 @@
     "react": "^19.1.1",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
+    "react-phone-number-input": "^3.4.13",
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.29.1",
-    "recharts": "^3.2.1",
-    "xlsx": "^0.18.5"
+    "recharts": "^3.2.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
