--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^7.9.1",
     "react-toastify": "^11.0.5",
     "react-tooltip": "^5.29.1",
-    "recharts": "^3.2.1"
+    "recharts": "^3.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
